refactor: changed font

--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Libre+Caslon+Display:wght@400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600&display=swap" rel="stylesheet">
+<!-- HEAD -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../assets/css/navbar.css">
 <link rel="icon" type="image/png" href="../assets/images/logo.png">
 
@@ -45,8 +48,7 @@ html, body {
 }
 .site-title {
   margin: 0;
-  font-family: "Libre Caslon Display", serif;
-  font-size: 5rem;
+  font-family: "Orbitron", sans-serif;  font-size: 5rem;
   line-height: 1;
 }
 .tagline {
@@ -145,8 +147,7 @@ html, body {
   margin-bottom: 80px;
 }
 .col h2 {
-  font-family: "Libre Caslon Display", serif;
-  font-size: 2rem;
+  font-family: "Orbitron", sans-serif;  font-size: 2rem;
   margin: 0 0 12px 0;
 }
 .col p {
@@ -175,8 +176,7 @@ html, body {
 }
 
 .site-title {
-  font-family: "Libre Caslon Display", serif;
-  font-size: clamp(2rem, 6vw, 3.6rem); /* responsive size */
+  font-family: "Orbitron", sans-serif;  font-size: clamp(2rem, 6vw, 3.6rem); /* responsive size */
   letter-spacing: -1px;
   line-height: 0.95;
   text-transform: uppercase;
