--- a/achievements/index.html
+++ b/achievements/index.html
@@ -10,6 +10,9 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600;800&family=Libre+Caslon+Display:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600&display=swap" rel="stylesheet">
+<!-- HEAD -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
     :root{
@@ -55,8 +58,7 @@
       flex:1 1 60%;
     }
     h1{
-      font-family: "Libre Caslon Display", serif;
-      font-size: clamp(2rem, 6vw, 3.6rem);
+  font-family: "Orbitron", sans-serif;      font-size: clamp(2rem, 6vw, 3.6rem);
       letter-spacing: -1px;
       margin:0 0 6px;
       line-height:0.95;
