--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,10 @@
 <title>Contact Us</title>
 
 <!-- Fonts & Icons -->
+ <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600&display=swap" rel="stylesheet">
+<!-- HEAD -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
 <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Inter:wght@300;600;800&family=Poppins:wght@100;200;400;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link href="https://db.onlinewebfonts.com/c/f39c9c54bc3f4f701ca3b18d675dde06?family=F3D+Techno+W00+Shadow" rel="stylesheet" type="text/css"/>
@@ -76,8 +80,7 @@ html, body {
 }
 
 .socials span {
-  font-family: "Libre Caslon Display", serif;
-  font-size: 2.4rem;
+  font-family: "Orbitron", sans-serif;  font-size: 2.4rem;
   letter-spacing: 1px;
   position: relative;
 }
@@ -113,8 +116,7 @@ html, body {
 
 /* Captains Section */
 .captains-section h2 {
-  font-family: "Libre Caslon Display", serif;
-  font-size: 1.6rem;
+  font-family: "Orbitron", sans-serif;  font-size: 1.6rem;
   font-weight: normal;
   margin-bottom: 20px;
 }
@@ -140,8 +142,7 @@ html, body {
 
 .site-title {
   margin: 0;
-  font-family: "Libre Caslon Display", serif;
-  font-size: 3.5rem;
+  font-family: "Orbitron", sans-serif;  font-size: 3.5rem;
   text-align: right;
   letter-spacing: 2px;
   position: relative;
