--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,10 @@
 <title>Projects</title>
 
 <!-- Fonts & Icons (kept) -->
+ <link href="https://fonts.googleapis.com/css2?family=Sora:wght@400;600&display=swap" rel="stylesheet">
+<!-- HEAD -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
 <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Inter:wght@300;600;800&family=Poppins:wght@100;200;400;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link href="https://db.onlinewebfonts.com/c/f39c9c54bc3f4f701ca3b18d675dde06?family=F3D+Techno+W00+Shadow" rel="stylesheet" type="text/css"/>
@@ -49,8 +53,7 @@ html,body{
 /* keep animated underline under title (restored) */
 .site-title{
   margin:0 0 44px;
-  font-family:"Libre Caslon Display", serif;
-  font-size:3rem;
+  font-family: "Orbitron", sans-serif;  font-size:3rem;
   text-align:right;
   letter-spacing:1px;
   position:relative;
