--- a/contact/index.html
+++ b/contact/index.html
@@ -196,7 +196,7 @@ html, body {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  font-family: "F3D Techno W00 Shadow", sans-serif;
+font-family: "Orbitron", sans-serif; 
   font-size: 3rem;
   color: #fff;
   padding: 14px 34px;
@@ -305,23 +305,104 @@ html, body {
         </div>
       </div>
 
-      <div class="captains-section">
-        <h2>Current Team Captains</h2>
-        <div class="captains">
-          <div class="captain">
-            <strong>Piyush Kumar</strong><br>
-            B221115ME<br>
-            <a href="mailto:piyush_b221115me@nitc.ac.in" style="color: inherit; text-decoration: none;">piyush_b221115me@nitc.ac.in</a><br>
-            <a href="tel:+919693292761" style="color: inherit; text-decoration: none;">+91-9693292761</a>
-          </div>
-          <div class="captain">
-            <strong>Krishnachandran R</strong><br>
-            B220972ME<br>
-            <a href="mailto:krishnachandran_b220972me@nitc.ac.in" style="color: inherit; text-decoration: none;">krishnachandran_b220972me@nitc.ac.in</a><br>
-            <a href="tel:+917356822552" style="color: inherit; text-decoration: none;">+91-7356822552</a>
-          </div>
-        </div>
-      </div>
+<div class="coordinators-section">
+  <h2>Faculty Coordinator</h2>
+  
+  <!-- Faculty Coordinator -->
+  <div class="captains">
+    <div class="captain">
+      <strong>Dr. A. P. Sudheer</strong><br>
+      Associate Professor<br>
+      Mechanical Engineering Department<br>
+
+      <!-- Mail -->
+      <span style="display: inline-flex; align-items: center; gap: 2px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v.217l-8 4.8-8-4.8V4z"/>
+          <path d="M0 4.697v7.104l5.803-3.482L0 4.697zM6.761 8.83l-6.761 4.05A2 2 0 0 0 2 14h12a2 2 0 0 0 2-1.12l-6.761-4.05L8 9.583l-1.239-.753zM10.197 8.319 16 11.801V4.697l-5.803 3.622z"/>
+        </svg>
+        <a href="mailto:apsudheer@nitc.ac.in" style="text-decoration: none; color: inherit;">
+          apsudheer@nitc.ac.in
+        </a>
+      </span>
+    </div>
+  </div>
+
+  <h2>Student Coordinators</h2>
+  <div class="captains">
+
+    <div class="captain">
+      <strong>Piyush Kumar</strong><br>
+
+      <!-- Roll No -->
+      <span style="display: inline-flex; align-items: center; gap: 6px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 3H1v6a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6z"/>
+          <path d="M3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5z"/>
+        </svg>
+        B221115ME
+      </span><br>
+
+      <!-- Mail -->
+      <span style="display: inline-flex; align-items: center; gap: 6px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v.217l-8 4.8-8-4.8V4z"/>
+          <path d="M0 4.697v7.104l5.803-3.482L0 4.697zM6.761 8.83l-6.761 4.05A2 2 0 0 0 2 14h12a2 2 0 0 0 2-1.12l-6.761-4.05L8 9.583l-1.239-.753zM10.197 8.319 16 11.801V4.697l-5.803 3.622z"/>
+        </svg>
+        <a href="mailto:piyush_b221115me@nitc.ac.in" style="text-decoration: none; color: inherit;">
+          piyush_b221115me@nitc.ac.in
+        </a>
+      </span><br>
+
+      <!-- Phone -->
+      <span style="display: inline-flex; align-items: center; gap: 6px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M3.654 1.328a.678.678 0 0 1 .738-.092l2.522 1.26c.168.084.262.265.224.446l-.5 2.5a.678.678 0 0 1-.344.45l-1.2.6a11.42 11.42 0 0 0 5.292 5.292l.6-1.2a.678.678 0 0 1 .45-.344l2.5-.5a.678.678 0 0 1 .446.224l1.26 2.522a.678.678 0 0 1-.092.738l-1.2 1.2c-.272.272-.67.388-1.05.293-2.516-.629-4.925-2.037-7.03-4.142C2.89 7.32 1.482 4.911.853 2.395c-.095-.38.021-.778.293-1.05l1.2-1.2z"/>
+        </svg>
+        <a href="tel:+919693292761" style="text-decoration: none; color: inherit;">
+          +91-9693292761
+        </a>
+      </span>
+    </div>
+
+    <div class="captain">
+      <strong>Krishnachandran R</strong><br>
+
+      <!-- Roll No -->
+      <span style="display: inline-flex; align-items: center; gap: 6px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 3H1v6a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V6z"/>
+          <path d="M3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5z"/>
+        </svg>
+        B220972ME
+      </span><br>
+
+      <!-- Mail -->
+      <span style="display: inline-flex; align-items: center; gap: 6px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v.217l-8 4.8-8-4.8V4z"/>
+          <path d="M0 4.697v7.104l5.803-3.482L0 4.697zM6.761 8.83l-6.761 4.05A2 2 0 0 0 2 14h12a2 2 0 0 0 2-1.12l-6.761-4.05L8 9.583l-1.239-.753zM10.197 8.319 16 11.801V4.697l-5.803 3.622z"/>
+        </svg>
+        <a href="mailto:krishnachandran_b220972me@nitc.ac.in" style="text-decoration: none; color: inherit;">
+          krishnachandran_b220972me@nitc.ac.in
+        </a>
+      </span><br>
+
+      <!-- Phone -->
+      <span style="display: inline-flex; align-items: center; gap: 6px;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+          <path d="M3.654 1.328a.678.678 0 0 1 .738-.092l2.522 1.26c.168.084.262.265.224.446l-.5 2.5a.678.678 0 0 1-.344.45l-1.2.6a11.42 11.42 0 0 0 5.292 5.292l.6-1.2a.678.678 0 0 1 .45-.344l2.5-.5a.678.678 0 0 1 .446.224l1.26 2.522a.678.678 0 0 1-.092.738l-1.2 1.2c-.272.272-.67.388-1.05.293-2.516-.629-4.925-2.037-7.03-4.142C2.89 7.32 1.482 4.911.853 2.395c-.095-.38.021-.778.293-1.05l1.2-1.2z"/>
+        </svg>
+        <a href="tel:+917356822552" style="text-decoration: none; color: inherit;">
+          +91-7356822552
+        </a>
+      </span>
+    </div>
+
+  </div>
+</div>
+
+
     </div>
 
     <!-- Right side: Contact form -->
@@ -339,12 +420,25 @@ html, body {
 
   <div class="map-address-wrapper">
     <div class="address">
-      <h2>FIND US</h2>
-      MECHATRONICS/ROBOTICS LAB<br>
-      MECHANICAL ENGINEERING DEPARTMENT<br>
-      NATIONAL INSTITUTE OF TECHNOLOGY CALICUT<br>
-      P.O.- KOZHIKODE, KERALA, INDIA<br>
-      PIN- 673601
+<h2>FIND US</h2>
+<span style="display: inline-flex; align-items: center; gap: 6px;">
+  <!-- Mail Icon (SVG) -->
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v.217l-8 4.8-8-4.8V4z"/>
+    <path d="M0 4.697v7.104l5.803-3.482L0 4.697zM6.761 8.83l-6.761 4.05A2 2 0 0 0 2 14h12a2 2 0 0 0 2-1.12l-6.761-4.05L8 9.583l-1.239-.753zM10.197 8.319 16 11.801V4.697l-5.803 3.622z"/>
+  </svg>
+  <!-- Mail ID -->
+  <a href="mailto:rig@nitc.ac.in" style="text-decoration: none; color: inherit;">
+    rig@nitc.ac.in
+  </a>
+</span>
+<br>
+MECHATRONICS/ROBOTICS LAB<br>
+MECHANICAL ENGINEERING DEPARTMENT<br>
+NATIONAL INSTITUTE OF TECHNOLOGY CALICUT<br>
+P.O.- KOZHIKODE, KERALA, INDIA<br>
+PIN- 673601
+
     </div>
     <div class="map-frame">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7824.359159417558!2d75.9297534915051!3d11.321581305448928!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba642fd7d2cddaf%3A0x99f0e36e2a913519!2sRobotics%20Interest%20Group!5e0!3m2!1sen!2sin!4v1755514521054!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
